Add Footer final Commit

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,6 +2,11 @@
 
 /* utilities */
 
+.btn {
+    padding-left: 2rem;
+    padding-right: 2rem;
+}
+
 .btn_custom {
     background-color: $yellow_orange;
     color: white;
